<resources>
    <string name="app_name">DanckJr</string>
    <string name="action_settings">Enregistrez vos ordres</string>
    <string name="avance">Avance</string>
    <string name="recule">Recule</string>
    <string name="droite">Droite</string>
    <string name="gauche">Gauche</string>
    <string name="tourneDroite">Tourne à droite</string>
    <string name="tourneGauche">Tourne à gauche</string>
    <string name="flip">Fais un flip</string>
    <string name="arreteToi">Arrête toi</string>
    <string name="etatUrgence">Etat d\'urgence</string>
    <string name="close">J\'ai fini d\'enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="checkFiles">Actualiser vos enregistrements</string>
</resources>
